simplify metrics display. no more sparkline.

--- a/lighthouse-core/report/v2/templates.html
+++ b/lighthouse-core/report/v2/templates.html
@@ -35,22 +35,14 @@
 </template>
 
 <!-- Lighthouse timeline metric -->
-<template id="tmpl-lh-timeline-metric">
-  <div class="lh-timeline-metric">
-    <div class="lh-timeline-metric__sparkline">
-      <div class="lh-sparkline__bar"></div>
-    </div>
-    <div class="lh-timeline-metric__header">
-      <div class="lh-timeline-metric__value"><!-- fill me --></div>
-      <details class="lh-timeline-metric__details lh-expandable-details">
-        <summary class="lh-timeline-metric__summary lh-expandable-details__summary">
-          <span class="lh-timeline-metric__title"><!-- fill me --></span>
-          <div class="lh-toggle-arrow" title="See audits"></div>
-        </summary>
-        <div class="lh-timeline-metric__description"><!-- fill me --></div>
-      </details>
-    </div>
+<template id="tmpl-lh-perf-metric">
+
+  <div class="lh-perf-metric">
+    <span class="lh-perf-metric__title"></span>
+    <div class="lh-perf-metric__value"><span></span></div>
+    <div class="lh-perf-metric__description"></div>
   </div>
+
 </template>
 
 <!-- Lighthouse left nav -->
