--- a/lighthouse-core/report/v2/templates.html
+++ b/lighthouse-core/report/v2/templates.html
@@ -6,6 +6,16 @@
   </div>
 </template>
 
+<!-- Lighthouse score scale -->
+<template id="tmpl-lh-scorescale">
+  <div class="lh-scorescale">
+    <span class="lh-scorescale-label">Score scale:</span>
+    <span class="lh-scorescale-range lh-scorescale-range--fail">0-44</span>
+    <span class="lh-scorescale-range lh-scorescale-range--average">45-74</span>
+    <span class="lh-scorescale-range lh-scorescale-range--pass">75-100</span>
+  </div>
+</template>
+
 <!-- Lighthouse category score -->
 <template id="tmpl-lh-category-score">
   <div class="lh-score">
